bindings/fortran/src/proven_ffi.f90


        function proven_path_has_traversal(ptr, length) &
                bind(c, name="proven_path_has_traversal") result(res)
            import :: c_ptr, c_size_t, c_proven_bool_result
            type(c_ptr), value, intent(in)        :: ptr
            integer(c_size_t), value, intent(in)  :: length
            type(c_proven_bool_result) :: res
        end function proven_path_has_traversal

        function proven_path_sanitize_filename(ptr, length) &
                bind(c, name="proven_path_sanitize_filename") result(res)
            import :: c_ptr, c_size_t, c_proven_string_result
            type(c_ptr), value, intent(in)        :: ptr
            integer(c_size_t), value, intent(in)  :: length
            type(c_proven_string_result) :: res
        end function proven_path_sanitize_filename

        ! ----- SafeEmail -----------------------------------------------------

        function proven_email_is_valid(ptr, length) &
                bind(c, name="proven_email_is_valid") result(res)
            import :: c_ptr, c_size_t, c_proven_bool_result
            type(c_ptr), value, intent(in)        :: ptr
            integer(c_size_t), value, intent(in)  :: length
            type(c_proven_bool_result) :: res
        end function proven_email_is_valid

        ! ----- SafeNetwork ---------------------------------------------------

        function proven_network_parse_ipv4(ptr, length) &
                bind(c, name="proven_network_parse_ipv4") result(res)
            import :: c_ptr, c_size_t, c_proven_ipv4_result
            type(c_ptr), value, intent(in)        :: ptr
            integer(c_size_t), value, intent(in)  :: length
            type(c_proven_ipv4_result) :: res
        end function proven_network_parse_ipv4

        function proven_network_ipv4_is_private(addr) &
                bind(c, name="proven_network_ipv4_is_private") result(res)
            import :: c_bool, c_proven_ipv4_address
            type(c_proven_ipv4_address), value, intent(in) :: addr
            logical(c_bool) :: res
        end function proven_network_ipv4_is_private

        function proven_network_ipv4_is_loopback(addr) &
                bind(c, name="proven_network_ipv4_is_loopback") result(res)
            import :: c_bool, c_proven_ipv4_address
            type(c_proven_ipv4_address), value, intent(in) :: addr
            logical(c_bool) :: res
        end function proven_network_ipv4_is_loopback

        ! ----- SafeCrypto ----------------------------------------------------

        function proven_crypto_constant_time_eq(p1, l1, p2, l2) &
                bind(c, name="proven_crypto_constant_time_eq") result(res)
            import :: c_ptr, c_size_t, c_proven_bool_result
            type(c_ptr), value, intent(in)        :: p1
            integer(c_size_t), value, intent(in)  :: l1
            type(c_ptr), value, intent(in)        :: p2
            integer(c_size_t), value, intent(in)  :: l2
            type(c_proven_bool_result) :: res
        end function proven_crypto_constant_time_eq

        function proven_crypto_random_bytes(ptr, length) &
                bind(c, name="proven_crypto_random_bytes") result(status)
            import :: c_ptr, c_size_t, c_int32_t
            type(c_ptr), value    :: ptr
            integer(c_size_t), value, intent(in) :: length
            integer(c_int32_t) :: status
        end function proven_crypto_random_bytes

        ! ----- SafeUUID -----------------------------------------------------

        function proven_uuid_v4() bind(c, name="proven_uuid_v4") result(res)
            import :: c_proven_uuid_result
            type(c_proven_uuid_result) :: res
        end function proven_uuid_v4

        function proven_uuid_to_string(uuid) &
                bind(c, name="proven_uuid_to_string") result(res)
            import :: c_proven_uuid, c_proven_string_result
            type(c_proven_uuid), value, intent(in) :: uuid
            type(c_proven_string_result) :: res
        end function proven_uuid_to_string

        function proven_uuid_parse(ptr, length) &
                bind(c, name="proven_uuid_parse") result(res)
            import :: c_ptr, c_size_t, c_proven_uuid_result
            type(c_ptr), value, intent(in)        :: ptr
            integer(c_size_t), value, intent(in)  :: length
            type(c_proven_uuid_result) :: res
        end function proven_uuid_parse

        function proven_uuid_is_nil(uuid) &
                bind(c, name="proven_uuid_is_nil") result(res)
            import :: c_bool, c_proven_uuid
            type(c_proven_uuid), value, intent(in) :: uuid
            logical(c_bool) :: res
        end function proven_uuid_is_nil

        function proven_uuid_version(uuid) &
                bind(c, name="proven_uuid_version") result(ver)
            import :: c_int8_t, c_proven_uuid
            type(c_proven_uuid), value, intent(in) :: uuid
            integer(c_int8_t) :: ver
        end function proven_uuid_version

        ! ----- SafeHex ------------------------------------------------------

        function proven_hex_encode(ptr, length, uppercase) &
                bind(c, name="proven_hex_encode") result(res)
            import :: c_ptr, c_size_t, c_bool, c_proven_string_result
            type(c_ptr), value, intent(in)        :: ptr
            integer(c_size_t), value, intent(in)  :: length
            logical(c_bool), value, intent(in)    :: uppercase
            type(c_proven_string_result) :: res
        end function proven_hex_encode

        function proven_hex_decode(ptr, length) &
                bind(c, name="proven_hex_decode") result(res)
            import :: c_ptr, c_size_t, c_proven_hex_decode_result
            type(c_ptr), value, intent(in)        :: ptr
            integer(c_size_t), value, intent(in)  :: length
            type(c_proven_hex_decode_result) :: res
        end function proven_hex_decode

        subroutine proven_hex_free(res) bind(c, name="proven_hex_free")
            import :: c_ptr
            type(c_ptr), value :: res
        end subroutine proven_hex_free

        ! ----- SafeFloat ----------------------------------------------------

        function proven_float_div(a, b) &
                bind(c, name="proven_float_div") result(res)
            import :: c_double, c_proven_float_result
            real(c_double), value, intent(in) :: a, b
            type(c_proven_float_result) :: res
        end function proven_float_div

        function proven_float_is_finite(x) &
                bind(c, name="proven_float_is_finite") result(res)
            import :: c_double, c_bool
            real(c_double), value, intent(in) :: x
            logical(c_bool) :: res
        end function proven_float_is_finite

        function proven_float_is_nan(x) &
                bind(c, name="proven_float_is_nan") result(res)
            import :: c_double, c_bool
            real(c_double), value, intent(in) :: x
            logical(c_bool) :: res
        end function proven_float_is_nan

        function proven_float_sqrt(x) &
                bind(c, name="proven_float_sqrt") result(res)
            import :: c_double, c_proven_float_result
            real(c_double), value, intent(in) :: x
            type(c_proven_float_result) :: res
        end function proven_float_sqrt

        function proven_float_ln(x) &
                bind(c, name="proven_float_ln") result(res)
            import :: c_double, c_proven_float_result
            real(c_double), value, intent(in) :: x
            type(c_proven_float_result) :: res
        end function proven_float_ln

        ! ----- SafeVersion --------------------------------------------------

        function proven_version_parse(ptr, length) &
                bind(c, name="proven_version_parse") result(res)
            import :: c_ptr, c_size_t, c_proven_version_result
            type(c_ptr), value, intent(in)        :: ptr
            integer(c_size_t), value, intent(in)  :: length
            type(c_proven_version_result) :: res
        end function proven_version_parse

        function proven_version_compare(a, b) &
                bind(c, name="proven_version_compare") result(cmp)
            import :: c_int32_t, c_proven_semantic_version
            type(c_proven_semantic_version), value, intent(in) :: a, b
            integer(c_int32_t) :: cmp
        end function proven_version_compare

        subroutine proven_version_free(ver) bind(c, name="proven_version_free")
            import :: c_ptr
            type(c_ptr), value :: ver
        end subroutine proven_version_free

        ! ----- SafeAngle ----------------------------------------------------

        function proven_angle_deg_to_rad(degrees) &
                bind(c, name="proven_angle_deg_to_rad") result(radians)
            import :: c_double
            real(c_double), value, intent(in) :: degrees
            real(c_double) :: radians
        end function proven_angle_deg_to_rad

        function proven_angle_rad_to_deg(radians) &
                bind(c, name="proven_angle_rad_to_deg") result(degrees)
            import :: c_double
            real(c_double), value, intent(in) :: radians
            real(c_double) :: degrees
        end function proven_angle_rad_to_deg

        function proven_angle_normalize_degrees(degrees) &
                bind(c, name="proven_angle_normalize_degrees") result(normalized)
            import :: c_double
            real(c_double), value, intent(in) :: degrees
            real(c_double) :: normalized
        end function proven_angle_normalize_degrees

        function proven_angle_normalize_radians(radians) &
                bind(c, name="proven_angle_normalize_radians") result(normalized)
            import :: c_double
            real(c_double), value, intent(in) :: radians
            real(c_double) :: normalized
        end function proven_angle_normalize_radians

        ! ----- SafeCurrency -------------------------------------------------

        function proven_currency_parse(ptr, length) &
                bind(c, name="proven_currency_parse") result(res)
            import :: c_ptr, c_size_t, c_proven_currency_result
            type(c_ptr), value, intent(in)        :: ptr
            integer(c_size_t), value, intent(in)  :: length
            type(c_proven_currency_result) :: res
        end function proven_currency_parse

        function proven_currency_format(amount_minor, code, decimal_places) &
                bind(c, name="proven_currency_format") result(res)
            import :: c_int64_t, c_int8_t, c_proven_string_result
            integer(c_int64_t), value, intent(in) :: amount_minor
            integer(c_int8_t), intent(in)         :: code(3)
            integer(c_int8_t), value, intent(in)  :: decimal_places
            type(c_proven_string_result) :: res
        end function proven_currency_format

        ! ----- SafePhone ----------------------------------------------------

        function proven_phone_parse(ptr, length) &
                bind(c, name="proven_phone_parse") result(res)
            import :: c_ptr, c_size_t, c_proven_phone_result
            type(c_ptr), value, intent(in)        :: ptr
            integer(c_size_t), value, intent(in)  :: length
            type(c_proven_phone_result) :: res
        end function proven_phone_parse

        function proven_phone_format_e164(country_code, national_number) &
                bind(c, name="proven_phone_format_e164") result(res)
            import :: c_int16_t, c_int64_t, c_proven_string_result
            integer(c_int16_t), value, intent(in) :: country_code
            integer(c_int64_t), value, intent(in) :: national_number
            type(c_proven_string_result) :: res
        end function proven_phone_format_e164

    end interface
